DELPHITWAIN CHANGE LOG
======================
2024/11/06 MaxM - Changed GetTwainDirectory function to tests 32/64 bit dll
        
2024/09/10 MaxM - Added Select and Settings Forms taken from Project DigIt by changing parameters, field names and types          
	   Deleted obsolet uFormSelectSource_VCL and Twain_o;
           Delphi Compatibility for Forms;   

2023/12 MaxM - CapabilityCanGet/Set; GetOneValue overloads; GetIndicators; Get/Set AutoScan;
	     SetFeederEnabled set also AutoScan and AutoFeed;
	     Paper Feeding Get/Set in TTwainPaperFeedingSet; GetOrientation
	     GetEnumerationValue overloads; changed params of GetPaperSizeSet, GetIBitDepth;
	     CreateWindow Delphi compatibility;
             GetRangeValue,GetArrayValue,SetOneValue overload;
             Use of Fix32ToFloat intestead of StrToFloat;
             Use of overloaded methods in code (to remove annoying repetitions)
             RangeCeckError Off in Fix32ToFloat/FloatToFix32
             Delphi compatibility;
             Enum and Array Capabilities always return Current and Default; DuplexEnabled; TwainPixelTypes;
          14 Changed Extended to Single (for platform compatibility and for my actual state);
             Added OnTwainAcquire, rOnAcquireProgress in TCustomDelphiTwain;
             changelog in text file.
	  15 added Native Image Handle to DoTwainAcquire params
	  18 Utils: new function WriteBitmapToFile; moved DibNumColors
          19 Divided the two events OnTwainAcquireNative OnTwainAcquire; changed Handle param Names
             ReadNative not create the HBitmap if unused and delete it after if used;
             GetResolution distinguishes between Enum and array (A very serious mistake);
             Utils: WriteBitmapToFile with only HBitmap param
          20 Renamed OnTwainAcquire to OnTwainAcquireBitmap (no confusion with derived classes) and changed params;
             ReadNative don't free HBitmap;