@@ -1,5 +1,9 @@
 DELPHITWAIN CHANGE LOG
 ======================
+2024/12/13 MaxM - Added Download method and Download_XXX properties;
+	          Modified TransferImages method to handle multiple files scan (Feeder);
+		  Commented the Obscure RefreshVirtualWindow method that Destroy all; 
+
 2024/11/06 MaxM - Changed GetTwainDirectory function to tests 32/64 bit dll
         
 2024/09/10 MaxM - Added Select and Settings Forms taken from Project DigIt by changing parameters, field names and types          
